--- a/DREA/DREA.App.csproj
+++ b/DREA/DREA.App.csproj
@@ -173,6 +173,7 @@
     <Content Include="img\logo.png" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\jquery-3.3.1.min.js" />
+    <Content Include="js\jquery.form.min.js" />
     <Content Include="js\mdb.min.js" />
     <Content Include="js\popper.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -233,11 +234,13 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\" />
+    <Folder Include="Documentos\" />
     <Folder Include="Models\" />
     <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Views\Documento\Editar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DREA.Dominio\DREA.Dominio.csproj">
