--- a/DREA.Dominio/DREA.Dominio.csproj
+++ b/DREA.Dominio/DREA.Dominio.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DocumentoBL.cs" />
+    <Compile Include="DocumentoDetBL.cs" />
     <Compile Include="OficinaBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio.cs" />
