--- a/DREA.Dominio/DREA.Dominio.csproj
+++ b/DREA.Dominio/DREA.Dominio.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio.cs" />
     <Compile Include="TipoDocBL.cs" />
+    <Compile Include="UsuarioBL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DREA.Modelo\DREA.Modelo.csproj">
