--- a/DREA/DREA.App.csproj
+++ b/DREA/DREA.App.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="helper\AdminFilter.cs" />
+    <Compile Include="helper\SessionHelper.cs" />
     <Compile Include="Models\ResponseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -212,8 +214,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Oficina\Create.cshtml" />
     <Content Include="Views\Oficina\Delete.cshtml" />
@@ -243,6 +243,10 @@
     <None Include="packages.config" />
     <Content Include="Views\Documento\Editar.cshtml" />
     <Content Include="Views\Documento\Adjuntos.cshtml" />
+    <Content Include="Views\Documento\Ver.cshtml" />
+    <Content Include="Views\Documento\VerAdjuntos.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DREA.Dominio\DREA.Dominio.csproj">
