--- a/DREA/Web.config
+++ b/DREA/Web.config
@@ -18,11 +18,14 @@
     <add name="DREAEntities" connectionString="metadata=res://*/ModelDREA.csdl|res://*/ModelDREA.ssdl|res://*/ModelDREA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=DREA;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1" />
+    <compilation debug="false" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <authentication mode="Forms">
+      <forms name="sesion" cookieless="UseCookies" protection="All" />
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
